--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <h1>JavaScript SandBox: Patterns</h1>
 
   <script src="app.js"></script>
+  <script src="singleton.pattern.js"></script>
+
 </body>
+
 </html>
