--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script src="app.js"></script>
   <script src="singleton.pattern.js"></script>
-
+  <script src="factory.pattern.js"></script>
 </body>
 
 </html>
