--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
 </head>
 <body>
   <h1>JavaScript SandBox: Patterns</h1>
+  <button class="sub-ms">Subscribe to Milliseconds</button>
+  <button class="unsub-ms">Unsubscribe to Milliseconds</button>
+  <br><br>
+  <button class="sub-s">Subscribe to Seconds</button>
+  <button class="unsub-s">Unsubscribe from Seconds</button>
+  <br><br>
+  <button class="fire">Fire</button>
 
-  <script src="app.js"></script>
+
+  <!-- <script src="app.js"></script>
   <script src="singleton.pattern.js"></script>
   <script src="factory.pattern.js"></script>
+  <script src="observer.pattern.js"></script> -->
+  <Script src="observer.pattern.es6.js"></Script>
 </body>
 
 </html>
